src/main/metadata/objects/Requirement_User_Story__c.object
<CustomObject>
    <description>PMO: Connect requirement and user story</description>
    <fields>
        <fullName>Requirement_Description__c</fullName>
        <label>Requirement Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup requirement</description>
        <label>Requirement</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Requirement_UserStory__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Requirement</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Requirement_UserStory__c</referenceTo>
        <relationshipLabel>Requirement - User Story</relationshipLabel>
        <relationshipName>Requirement_User_Story_Requirement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Story_Detail__c</fullName>
        <label>User Story Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Requirement_UserStory__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>User Story</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Requirement_UserStory__c</referenceTo>
        <relationshipLabel>Requirement - User Story</relationshipLabel>
        <relationshipName>Requirement_User_Story_User_Story</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Requirement - User Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requirement__c</columns>
        <columns>User_Story__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R&amp;U-{000000}</displayFormat>
        <label>R&amp;U Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirement - User Story</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>